@@ -127,7 +127,8 @@ class FastAccelStepper {
   // Returns 0 on success, or -1 on invalid value
   // Invalid is <MIN_DELTA_TICKS in us or >~250 Mio.
   int8_t setSpeedInUs(uint32_t min_step_us);
-  // retrieve current speed
+  // retrieve current set speed (while accelerationn/deceleration: not the
+  // actual speed !)
   uint32_t getSpeedInUs() { return _rg.getSpeedInUs(); }
 
   // setSpeedInHz() allows to set the stepper speed as step frequency in Hertz.
